BackEnd/RMEC-rm-service/src/main/java/com/example/demo/error/IdRequestFailsException.java
package com.example.demo.error;

public class IdRequestFailsException extends RuntimeException {
	public IdRequestFailsException () {
		super(" id project wrong format");
	}
}
